--- a/P&G Documentation.ipynb
+++ b/P&G Documentation.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "<a name='SS'></a>\n",
     "### SS Grid\n",
-    "SS Grid is an option that adds additional cost to the grid modules if they're Stainless Steel. For instance if it costs \\$500 for the grid's interior and perimeter and \\$2000 for SS Grid then the cost would be \\$2500 for the SS grid in total.<br>\n",
+    "SS Grid is an option that adds additional cost to the grid modules if they're Stainless Steel. For instance if it costs \\\\$500 for the grid's interior and perimeter and \\\\$2000 for SS Grid then the cost would be \\\\$2500 for the SS grid in total.<br>\n",
     "SS Grid added Cost: $(Length * Width) * \\$42.5$"
    ]
   },
@@ -240,7 +240,8 @@
     "<a name='hanging_brackets'></a>\n",
     "### Hanging Brackets\n",
     "The Hanging Brackets are calculated, but never used for pricing or other components. <br>\n",
-    "The Hanging Grid Brackets are calculated if there is no plenum depth.<br> 4 Brackets are used on the first module and 2 are used for each module after that <br>\n",
+    "The Hanging Grid Brackets are calculated if there is no plenum depth.<br> \n",
+    "4 Brackets are used on the first module and 2 are used for each module after that <br>\n",
     "Grid Hanging Brackets: $2+(2*GridQuantity)$"
    ]
   },
@@ -270,7 +271,7 @@
     "### Suspension Brackets\n",
     "Suspension Brackets are calculated  if there is no plenum depth (grid only) <br>\n",
     "4 Suspension Brackets are used, and 6 are used if the grid length is more than 12 <br>\n",
-    "The cost of 1 Bracket is \\$15.00 <br>\n",
+    "The cost of 1 Bracket is \\\\$15.00 <br>\n",
     "Suspension Brackets: $4 + (2$ if Length $> 12)$"
    ]
   },
@@ -310,14 +311,14 @@
     "### Number of Lightbars\n",
     "The number of lightbars are calculated if there is grid length and lamp spacing.<br>\n",
     "The calculations will take the height or width, (whichever is larger) and divide it by the lamp spacing then subtracted by 1 and rounded up<br>\n",
-    "The cost of a single light bar is \\$1.62 <br>\n",
+    "The cost of a single light bar is \\\\$1.62 <br>\n",
     "Light Bar: RoundUp(${\\frac{GridWidth}{LampSpacing}-1}$) if Width>Length <br>\n",
     "RoundUp($\\frac{GridLength}{LampSpacing}-1$) if Width<Length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
     "### Led Module\n",
     "LED Modules are estimated if there is length to the grid and valid lamp spacing <br>\n",
     "The calculations are using the lightbar calculation with the Grid Length exclusivly and multiplying it by 2, 3, or 4 based on Grid Width.<br>\n",
-    "The cost of a single LED Module is \\$8.50 <br>\n",
+    "The cost of a single LED Module is \\\\$8.50 <br>\n",
     "LED Module:$2*RoundUp(\\frac{GridLength}{Lamp Spacing}-1)$ if Grid Width < 6 <br>\n",
     "$3*RoundUp(\\frac{GridLength}{Lamp Spacing}-1)$ if Grid Width < 8 <br>\n",
     "$4*RoundUp(\\frac{GridLength}{Lamp Spacing}-1)$ if Grid Width < 11 <br>\n",
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -386,13 +387,13 @@
     "### LED Drivers\n",
     "LED Drivers are estimated if there is at least 1 lightbar<br>\n",
     "The calcuations add 1 LED Driver if there are any amount of lightbars<br>\n",
-    "The Cost of a single LED Driver is $18<br>\n",
+    "The Cost of a single LED Driver is \\\\$18<br>\n",
     "LED Driver: 1 if Lightbars > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -418,18 +419,18 @@
     "### LED Hardware\n",
     "Hardware is estimated if there is a grid length<br>\n",
     "The calculations are the cost of the hardware for a 4ft light bar with factor for 6ft and 8ft lightbars that increases the cost based on the additional hardware needed. This cost is multipled by the number of lightbars in the grid<br>\n",
-    "The summed cost of hardware for a 4ft light bar is \\$5.93802 <br>\n",
+    "The summed cost of hardware for a 4ft light bar is \\\\$5.93802 <br>\n",
     "The summed cost consists of the following: <br>\n",
-    "Grid Grommet: 2 \\* \\$0.0277<br>\n",
-    "Disconnect: 1 \\* \\$0.6749<br>\n",
-    "Ground Lead: 1 \\* \\$2.4699 <br>\n",
-    "Wago: 2 \\* \\$0.0854<br>\n",
-    "Wago: 3 \\* \\$0.2552<br>\n",
-    "Wago: 6 \\* \\$0.2024<br>\n",
-    "LED Grommet: 4 \\* \\$0.02968 <br>\n",
-    "Pem Stud: 2 \\* \\$0.06015<br>\n",
-    "Christmas tree: 12 \\* \\$0.019 <br>\n",
-    "Misc. Hardware: 4 \\* \\$0.03<br>\n",
+    "Grid Grommet: 2 \\* \\\\$0.0277<br>\n",
+    "Disconnect: 1 \\* \\\\$0.6749<br>\n",
+    "Ground Lead: 1 \\* \\\\$2.4699 <br>\n",
+    "Wago: 2 \\* \\\\$0.0854<br>\n",
+    "Wago: 3 \\* \\\\$0.2552<br>\n",
+    "Wago: 6 \\* \\\\$0.2024<br>\n",
+    "LED Grommet: 4 \\* \\\\$0.02968 <br>\n",
+    "Pem Stud: 2 \\* \\\\$0.06015<br>\n",
+    "Christmas tree: 12 \\* \\\\$0.019 <br>\n",
+    "Misc. Hardware: 4 \\* \\\\$0.03<br>\n",
     "Hardware: 1 if Grid Width < 6<br>\n",
     "1 + $(\\frac{.57816}{5.93802}) * \\frac{GridLength}{LampSpacing}$ if Grid Width < 8<br>\n",
     "1 + $(\\frac{2*.57816}{5.93802})* \\frac{GridLength}{LampSpacing}$ if Grid Width $\\geq$ 8<br>\n",
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,9 +493,9 @@
     "The calculations are similar to hardware, where the cost is the summed cost for wiring a 4ft lightbar, then has a scaling factor for 6ft and 8ft bars. Then multiplied by the number of lightbars <br>\n",
     "The summed cost of wire for a 4ft light bar is \\$4.506 <br>\n",
     "the summed cost consists of the following: <br>\n",
-    "THHN 12ga: 20ft \\* \\$0.1092 <br>\n",
-    "TFFN 18ga: 20ft \\* \\$0.0976 <br>\n",
-    "Spiral Wrap: 1ft \\* \\$0.37 <br>\n",
+    "THHN 12ga: 20ft \\* \\\\$0.1092 <br>\n",
+    "TFFN 18ga: 20ft \\* \\\\$0.0976 <br>\n",
+    "Spiral Wrap: 1ft \\* \\\\$0.37 <br>\n",
     "Hardware: 1 if Grid Width < 6<br>\n",
     "1 + $(\\frac{1.65464}{4.506}) * \\frac{GridLength}{LampSpacing}$ if Grid Width < 8<br>\n",
     "1 + $(\\frac{2*1.65464}{4.506})* \\frac{GridLength}{LampSpacing}$ if Grid Width $\\geq$ 8<br>\n"
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -552,14 +553,14 @@
     "### Wiring of Ionization\n",
     "Wiring of Ionization is added if there is grid length and the user called for wiring of ionization<br>\n",
     "The calculation is either 1 if specified or 0 if not specified<br>\n",
-    "The cost of wiring of ionization is \\$50<br>\n",
+    "The cost of wiring of ionization is \\\\$50<br>\n",
     "Wiring of Ionization: 1 if wiring of ionization = True <br>\n",
     "0 if wiring of ionization = False<br>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -584,13 +585,13 @@
     "### Electical Labor\n",
     "Electical Labor is estimated if there is grid length<br>\n",
     "The calculation is the (LED Module Quantity * 75 minutes per task)/ 60 min<br>\n",
-    "The cost of 1 hour of Electrical Labor is \\$52.5<br>\n",
+    "The cost of 1 hour of Electrical Labor is \\\\$52.5<br>\n",
     "Electrical Labor: $\\frac{LED Module_{qty} * 75}{60}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -617,13 +618,13 @@
     "### Additional Electical Labor\n",
     "This is estimated if there is a grid depth <br>\n",
     "The calculation is Quanitity of LED Modules * .5 <br>\n",
-    "The cost of Additional Electrical Labor is \\$52.5 <br>\n",
+    "The cost of Additional Electrical Labor is \\\\$52.5 <br>\n",
     "Additional Labor: $.5 * LEDModule_{qty}$ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
