--- a/P&G Documentation.ipynb
+++ b/P&G Documentation.ipynb
@@ -491,7 +491,7 @@
     "### LED Wiring\n",
     "Wiring is estimated if there is grid length<br>\n",
     "The calculations are similar to hardware, where the cost is the summed cost for wiring a 4ft lightbar, then has a scaling factor for 6ft and 8ft bars. Then multiplied by the number of lightbars <br>\n",
-    "The summed cost of wire for a 4ft light bar is \\$4.506 <br>\n",
+    "The summed cost of wire for a 4ft light bar is \\\\$4.506 <br>\n",
     "the summed cost consists of the following: <br>\n",
     "THHN 12ga: 20ft \\* \\\\$0.1092 <br>\n",
     "TFFN 18ga: 20ft \\* \\\\$0.0976 <br>\n",
