--- a/P&G Documentation.ipynb
+++ b/P&G Documentation.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "<a name='closure'></a>\n",
     "### Perimeter Closure\n",
-    "Perimeter Grid Closure is not calculated, but instead is manually entered and is priced at $20 per Linear Foot"
+    "Perimeter Grid Closure is not calculated, but instead is manually entered and is priced at \\$20 per Linear Foot"
    ]
   },
   {
